--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="author" content="기업이름" />
-    <meta name="keywords" content="기생충, 타이타닉, 어벤져스, 반지의 제왕" />
-    <meta name="description" content="이 사이트는 영화소개 사이트입니다." />
-    <!-- <link rel="manifest" href="/manifest.json" /> -->
+    <meta name="description" content="Web site created using create-react-app" />
+    <link rel="manifest" href="/manifest.json" />
     <title>영화보기</title>
-    <link href="static/css/main.5ba0e563.chunk.css" rel="stylesheet">
+    <link href="static/css/main.9948ab6b.chunk.css" rel="stylesheet">
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
@@ -63,7 +61,7 @@
                         a.charset = "utf-8", a.timeout = 120, i.nc && a.setAttribute("nonce", i.nc), a.src =
                             function (e) {
                                 return i.p + "static/js/" + ({} [e] || e) + "." + {
-                                    3: "6317af52"
+                                    3: "9aa5d98c"
                                 } [e] + ".chunk.js"
                             }(e);
                         var c = new Error;
@@ -131,8 +129,8 @@
             t()
         }([])
     </script>
-    <script src="static/js/2.ab8f4736.chunk.js"></script>
-    <script src="static/js/main.2a783113.chunk.js"></script>
+    <script src="static/js/2.c085b54d.chunk.js"></script>
+    <script src="static/js/main.17bc45bd.chunk.js"></script>
 </body>
 
 </html>
